crates/brasa_errorset/tests/snapshots/errorset__e002_panic_arms_do_not_count.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E002] Error: catch! does not handle `NetError`
    ╭─[ e002_panic_arms_do_not_count.brs:14:3 ]
    │
 14 │ ╭─▶   risky(mode) catch! (e)
    ┆ ┆   
 16 │ ├─▶   end
    │ │           
    │ ╰─────────── add arms or `_`
────╯
