crates/brasa_errorset/tests/snapshots/errorset__e002_top_level_catch_all_missing_tag.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E002] Error: catch_all does not handle `ParseError`
    ╭─[ e002_top_level_catch_all_missing_tag.brs:19:12 ]
    │
 19 │ ╭─▶ let page = risky(1) catch_all (e)
    ┆ ┆   
 21 │ ├─▶ end
    │ │         
    │ ╰───────── add arms or `_`
────╯
