crates/brasa_errorset/tests/snapshots/errorset__e003_open_catch_bang.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E003] Error: catch! cannot be verified: the subject's error-set is open
   ╭─[ e003_open_catch_bang.bras:3:3 ]
   │
 3 │ ╭─▶   f() catch! (e)
   ┆ ┆   
 5 │ ├─▶   end
   │ │           
   │ ╰─────────── the error-set of this expression is open
   │     
   │     Note: an indirect call or a throw of unknown type makes the set open
───╯
