crates/brasa_errorset/tests/snapshots/errorset__e004_undeclared_throw.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E004] Error: `fetch` throws `DnsError` but does not declare it
    ╭─[ e004_undeclared_throw.brs:10:1 ]
    │
 10 │ ╭─▶ def fetch(mode: int): string throws NetError
    ┆ ┆   
 17 │ ├─▶ end
    │ │         
    │ ╰───────── this function can throw `DnsError`
────╯
[E004] Error: `relay` throws `DnsError` but does not declare it
    ╭─[ e004_undeclared_throw.brs:19:1 ]
    │
 19 │ ╭─▶ def relay(mode: int): string throws NetError
    ┆ ┆   
 21 │ ├─▶ end
    │ │         
    │ ╰───────── this function can throw `DnsError`
────╯
